[Feature] Workflow: Source Connection, Target connection 체크 추가
