# src/common/lib/workflow/api/model/index.ts
@@ -2,5 +2,7 @@ export * from './create-workflow-request';
 export * from './database-metadata';
 export * from './database-metadata-response';
 export * from './database-type';
+export * from './source-connection-verification-response';
+export * from './target-connection-verification-response';
 export * from './workflow-response';
 export * from './workflow-status';
